fixed card sizing and overflow bug during mobile nav open

--- a/css/card.css
+++ b/css/card.css
@@ -14,3 +14,12 @@
 .card-body {
   flex: 1 max(50%, 436px);
 }
+
+.card-body p {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+.card-body h2 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
