--- a/css/reset.css
+++ b/css/reset.css
@@ -14,6 +14,3 @@ body {
   /* width: 100%; */
   overflow-x: hidden;
 }
-body {
-  position: relative;
-}
