--- a/css/utilities.css
+++ b/css/utilities.css
@@ -50,7 +50,8 @@
 
 /* stop scrolling */
 .no-scroll {
-  overflow: hidden;
+  /* overflow: hidden; */
+  position: fixed;
 }
 
 @media (max-width: 547px) {
@@ -63,7 +64,7 @@
   }
 
   .text-md {
-    font-size: 24px;
-    margin-bottom: 20px;
+    font-size: 20px;
+    margin-bottom: 15px;
   }
 }
